@@ -1,14 +1,41 @@
 package com.objectcomputing.checkins.notifications.email;
 
 import com.objectcomputing.checkins.services.TestContainersSuite;
+import io.micronaut.inject.qualifiers.Qualifiers;
 import org.json.JSONArray;
 import org.junit.jupiter.api.Test;
 
-import java.util.*;
+import java.util.ArrayList;
+import java.util.List;
 
-import static org.junit.jupiter.api.Assertions.*;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertInstanceOf;
+import static org.junit.jupiter.api.Assertions.assertNotSame;
+import static org.junit.jupiter.api.Assertions.assertSame;
+import static org.junit.jupiter.api.Assertions.assertTrue;
 
 class MailJetSenderTest extends TestContainersSuite {
+
+    @Test
+    void namedSendersAreSingletons() {
+        // given
+        var htmlSender = getEmailSender(MailJetFactory.HTML_FORMAT);
+        var textSender = getEmailSender(MailJetFactory.TEXT_FORMAT);
+        var secondHtmlSender = getEmailSender(MailJetFactory.HTML_FORMAT);
+
+        // then htmlSender and secondHtmlSender should be the same instance
+        assertSame(htmlSender, secondHtmlSender);
+
+        // then textSender should be a different instance to htmlSender
+        assertNotSame(htmlSender, textSender);
+
+        // then textSender should be a different instance to secondHtmlSender
+        assertNotSame(secondHtmlSender, textSender);
+    }
+
+    private EmailSender getEmailSender(String name) {
+        return getEmbeddedServer().getApplicationContext().getBean(EmailSender.class, Qualifiers.byName(name));
+    }
 
     @Test
     void testCreateBatchesForManyRecipients() {
@@ -16,14 +43,14 @@ class MailJetSenderTest extends TestContainersSuite {
         int numRecipients = MailJetSender.MAILJET_RECIPIENT_LIMIT + 10;
 
         for (int i = 1; i <= numRecipients; i++) {
-            recipients.add("recipient" + String.format("%02d", i) + "@objectcomputing.com");
+            recipients.add("recipient%02d@objectcomputing.com".formatted(i));
         }
 
         List<JSONArray> batches = MailJetSender.getEmailBatches(recipients.toArray(String[]::new));
 
         assertEquals(2, batches.size());
 
-        JSONArray firstBatch = batches.get(0);
+        JSONArray firstBatch = batches.getFirst();
         assertEquals(MailJetSender.MAILJET_RECIPIENT_LIMIT, firstBatch.length());
 
         List<String> firstEmailGroup = recipients.subList(0, MailJetSender.MAILJET_RECIPIENT_LIMIT);
